--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,11 @@ build/
 .kotlin
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+/.idea/
+/*.iws
+/*.iml
+/*.ipr
+
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
